blacklist-api/templates/pg-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blacklist-pg
  labels:
    key: pg
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pg-pod
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pg-pod
    spec:
      containers:
        - name: pg-c
          image: "registry.elensdata.com/elensai/postgres:9.4"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5432
          volumeMounts:
            - name: pgdb
              mountPath: /var/lib/postgresql/data
      
      volumes:
        - name: pgdb
          persistentVolumeClaim:
            claimName: pg-claim
