blacklist-api/templates/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  labels:
    key: redis-svc
spec:
  type: ClusterIP
  ports:
    - port: 6379 
      targetPort: http
      name: http
      # nodePort: 30050
  selector:
    app.kubernetes.io/name: redis-pod
